# varswap-smart-contract

./: README.md
factory_vara_dex/: Cargo.toml
factory_vara_dex/app/src/: lib.rs
factory_vara_dex/client/: Cargo.toml  build.rs
factory_vara_dex/client/src/: lib.rs
factory_vara_dex/tests/: Cargo.toml  gtest.rs
factory_vara_dex/tests/src/: gtest.rs  node_tests.rs  utils.rs
factory_vara_dex/tests/src/utils_gclient/: mod.rs
factory_vara_dex/wasm/: .binpath  Cargo.toml  factory_vara_dex.idl  factory_vara_dex_client.rs
lp_staking/: Cargo.toml  README.md  build.rs
lp_staking/app/: Cargo.toml
lp_staking/app/src/: lib.rs
lp_staking/app/src/clients/: lp_vara_dex_client.rs  mod.rs
lp_staking/app/src/services/: lp_staking_services.rs  mod.rs
lp_staking/app/src/states/: lp_staking_state.rs  mod.rs
lp_staking/client/: Cargo.toml  build.rs
lp_staking/client/src/: lib.rs
lp_staking/lib/: package.json
lp_staking/lib/src/: global.d.ts  lib.ts
lp_staking/src/: lib.rs
lp_staking/tests/: gtest.rs
lp_vara_dex/: Cargo.toml
lp_vara_dex/app/src/: lib.rs
lp_vara_dex/lib/src/: global.d.ts  lib.ts
lp_vara_dex/wasm/: lp_vara_dex.idl  lp_vara_dex_client.rs
router_vara_dex/: Cargo.toml
router_vara_dex/app/src/: lib.rs
router_vara_dex/client/: Cargo.toml  build.rs
router_vara_dex/tests/: Cargo.toml  factory_wasm.opt.wasm  gtest.rs  wvara_vft_wasm.opt.wasm
router_vara_dex/wasm/: router_vara_dex.idl  router_vara_dex_client.rs
wvara/: Cargo.toml
wvara/app/src/: mod.rs
wvara/wasm/: .binpath  Cargo.toml  extended_new_vft.rs  wvara_vft.idl
(+16 files in other folders)
